Resolves: tdf#108671 mark named expression single reference #REF! if deleted

Probably broken already since

    commit f77c9d5b3cb65d9c2e2417f60bec1113feac50e1
    Date:   Mon Jul 29 14:47:07 2013 -0400

Change-Id: If90a959d000a1bf5ab0804deb22d5cfad413ea5e
(cherry picked from commit 6580e171ad054dca38f55822e67a400191cecdf5)
Reviewed-on: https://gerrit.libreoffice.org/39072
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>